Fix slow connection issues and remove the up-to-date vercel preview url (#1)
* font-display: swap; should fix some glitches in slow connections, remove unnecessary fonts

* Remove the LOCAL_DEPLOYMENT thing

This has no effect. I'm also getting confused with the preview urls vercel provides :D. Updated to wiki.

* With slow connection scrollbar created layout shift so just apply these directly to root

TBH I don't know why these were even extended to classes. Updated the issue link to wiki: https://github.com/joonassandell/joonassandell-portfolio/wiki/Notes

--- a/stylesheets/generic/_fonts.scss
+++ b/stylesheets/generic/_fonts.scss
@@ -1,17 +1,15 @@
 @font-face {
-  font-display: block;
+  font-display: swap;
   font-family: 'Px Grotesk';
   font-style: normal;
   font-weight: 400;
-  src: url('/static/fonts/Px-Grotesk-Regular.woff2') format('woff2'),
-    url('/static/fonts/Px-Grotesk-Regular.woff') format('woff');
+  src: url('/static/fonts/Px-Grotesk-Regular.woff2') format('woff2');
 }
 
 @font-face {
-  font-display: block;
+  font-display: swap;
   font-family: 'Px Grotesk';
   font-style: normal;
   font-weight: 100;
-  src: url('/static/fonts/Px-Grotesk-Light.woff2') format('woff2'),
-    url('/static/fonts/Px-Grotesk-Light.woff') format('woff');
+  src: url('/static/fonts/Px-Grotesk-Light.woff2') format('woff2');
 }
